add bug